--- a/yudao-dependencies/pom.xml
+++ b/yudao-dependencies/pom.xml
@@ -86,6 +86,13 @@
                 <scope>import</scope>
             </dependency>
 
+
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>1.9.0</version>
+            </dependency>
+
             <!-- 业务组件 -->
             <dependency>
                 <groupId>io.github.mouzt</groupId>
